--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,3 +4,10 @@
 
 @import 'normalize.scss';
 @import 'base.scss';
+@import 'reset.scss';
+@import './components/detailsPage.scss';
+@import './components/footer.scss';
+@import './components/header.scss';
+@import './components/homePage.scss';
+@import './components/main.scss';
+@import './components/myFilmLibraryPage.scss';
