--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,9 +5,14 @@
 @import 'normalize.scss';
 @import 'base.scss';
 @import 'reset.scss';
-@import './components/detailsPage.scss';
-@import './components/footer.scss';
-@import './components/header.scss';
-@import './components/homePage.scss';
-@import './components/main.scss';
-@import './components/myFilmLibraryPage.scss';
+
+@import './components/detailsPage';
+@import './components/footer';
+@import './components/header';
+@import './components/homePage';
+@import './components/main';
+@import './components/myFilmLibraryPage';
+
+@import './helpers/fonts';
+@import './helpers/mixin';
+@import './helpers/variables';
