added styles to btn Prev and btn Next

--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -18,6 +18,7 @@
       font-size: 14px;
       letter-spacing: 0px;
       line-height: 1, 2;
+      font-family: "Roboto";
       color: #000000;
       padding-left: 28px;
     }
@@ -46,7 +47,7 @@
   text-align: center;
 }
 
-// Медиа от 768px и выше
+// Медиа SEARCH-FORM от 768px и выше
 @media (min-width: 768px) {
   .search-form__input {
     height: 24px;
@@ -65,4 +66,25 @@
   .search-form__error--visibale {
     font-size: 16px;
   }
+}
+
+// PAGINATION btn
+
+.page-counter__wrapper {
+  display: flex;
+  justify-content: space-between;;
+  width: 272px;
+  margin: 0 auto;
+  padding-bottom: 24px;
+}
+
+.page-counter__btn {
+  font-size: 22px;
+  line-height: 25px;
+  color: #556270;
+  font-weight: 700;
+  font-family: "Roboto";
+  border-radius: 5px;
+  border: 1px solid #dddddd;
+  padding: 12px 25px;
 }
