--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -66,3 +66,47 @@
     font-size: 16px;
   }
 }
+
+//фильмы
+.movies {
+    margin-bottom: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @include for-size(tablet) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+
+    &__image {
+      border-radius: 10px;
+      margin: 0 auto;
+    }
+    &__item {
+      position: relative;
+      width: 90%;
+      height: 150px;
+      border-radius: 5px;
+      overflow: hidden;
+      margin-bottom: 20px;
+      // display: flex;
+      // justify-content: center;
+      @include for-size(tablet) { 
+        width: 45%;
+        &:nth-child(odd) {
+          margin-right: 27px;
+        }
+        
+      }
+
+    }
+
+    &__title {
+      position: absolute;
+      font-size: 15px;
+      left: 10px;
+      bottom: 10px;
+      color: white;
+    }
+}
