--- a/src/sass/helpers/container.scss
+++ b/src/sass/helpers/container.scss
@@ -1,14 +1,12 @@
 .container {
-  @include for-size(mobile) {
-    width: 90%;
-    margin: 0 5%;
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: 768px) {
+    width: 688px;
   }
-  @include for-size(tablet) {
-    width: 86%;
-    margin: 0 7%;
-  }
-  @include for-size(desktop) {
-    width: 80%;
-    margin: 0 10%;
+
+  @media (min-width: 1280px) {
+    width: 1210px;
   }
 }
