connection of sections

--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -72,6 +72,7 @@
     color: $main-color;
     border: none;
     background: transparent;
+    outline: none;
     &:hover {
       opacity: 1;
     }
