--- a/src/sass/components/detailsPage.scss
+++ b/src/sass/components/detailsPage.scss
@@ -3,33 +3,91 @@
   flex-wrap: wrap;
   justify-content: center;
   &__image {
+    width: 274px;
     margin-bottom: 20px;
   }
 }
 
-.about-wrapper {
+.text-wrapper {
+  width: 275px;
+}
+.about-list__descr {
+  width: 50%;
+}
+.title {
+  line-height: 20px;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  color: #000000;
+  margin-bottom: 18px;
+  font-weight: 500;
+}
+.about-list__item {
+  width: auto;
   display: flex;
-  justify-content: space-between;
-}
-.film-title {
-  margin-bottom: 30px;
-}
-.about-list_item {
-  width: 138px;
-}
-.about-list_item,
-.descr-list__item {
-  // margin-right: 10px;
-  // margin-bottom: 28px;
+  justify-content: space-around;
   line-height: 26px;
   font-family: Roboto, sans-serif;
   font-size: 14px;
-  color: #000000;
+  color: #556270;
 }
-.descr-list__item {
-  width: 116px;
-}
-.about-list_item:nth-child(odd),
-.descr-list__item:nth-child(odd) {
+.about-list__item:nth-child(odd) {
   background-color: #addad6;
+}
+
+.plot__descr {
+  font-size: 14px;
+  line-height: 18px;
+  color: #556270;
+  margin-bottom: 26px;
+}
+.add-btn_watched,
+.add-btn_queue {
+  display: none;
+}
+@media (min-width: 768px) {
+  .details-page {
+    display: flex;
+    flex-wrap: unset;
+    justify-content: space-between;
+    &__image {
+      width: 356px;
+      margin-bottom: 20px;
+    }
+  }
+  .text-wrapper {
+    width: 340px;
+  }
+  .about-wrapper {
+    margin-bottom: 48px;
+  }
+  .add-btn_watched,
+  .add-btn_queue {
+    display: inline-block;
+    background-color: unset;
+    border: none;
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .add-btn_watched {
+    margin-right: 10px;
+  }
+  .add-btn_watched::before {
+    content: url(../../images/video.png);
+    padding-right: 8px;
+  }
+  .add-btn_queue::before {
+    content: url(../../images/calendar-plus.png);
+    padding-right: 8px;
+  }
+}
+@media (min-width: 1024px) {
+  .details-page {
+    &__image {
+      width: 428px;      
+    }
+  }
+  .text-wrapper {
+    width: 452px;
+  }
 }
