--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -73,6 +73,7 @@
     border: none;
     background: transparent;
     outline: none;
+    cursor: pointer;
     &:hover {
       opacity: 1;
     }
