--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,5 +14,5 @@
 @import './components/footer';
 @import './components/header';
 @import './components/homePage';
-@import './components/main';
+@import './components/mains';
 @import './components/myFilmLibraryPage';
