--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -42,29 +42,10 @@
   &__item {
     justify-content: flex-start;
     position: relative;
-    &:after {
-      position: absolute;
-      visibility: hidden;
-      opacity: 0;
-      display: block;
-      content: '';
-      background-color: $main-color;
-      width: 0;
-      height: 3px;
-      margin-top: 10px;
-      //   transition: all 0.3s linear;
-    }
-    &:hover:after,
-    &:focus:after {
-      visibility: visible;
-      opacity: 1;
-      width: 100%;
-    }
   }
   &__btn {
     width: 122px;
     opacity: 0.7;
-    // height: 40px;
     text-transform: uppercase;
     font-weight: 500;
     font-size: 14px;
@@ -74,8 +55,25 @@
     background: transparent;
     outline: none;
     cursor: pointer;
-    &:hover {
-      opacity: 1;
-    }
+    transition: opacity 0.3s linear;
+
+    // &:hover {
+    //   opacity: 1;
+    // }
+  }
+}
+.onClick {
+  opacity: 1;
+  color: $main-color;
+
+  &:after {
+    position: absolute;
+    display: block;
+    content: '';
+    background-color: $main-color;
+    width: 100%;
+    height: 3px;
+    margin-top: 10px;
+    transition: all 0.3s linear;
   }
 }
