--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -31,6 +31,7 @@
     border-bottom-width: 2px;
     border-bottom-color: #9894a1;
     padding-left: 5px;
+    outline: none;
 
     &::placeholder {
       font-size: 14px;
