--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -76,6 +76,10 @@
   padding: 12px 25px;
 }
 
+.hidden{
+  display: none;
+}
+
 // Медиа SEARCH-FORM от 768px и выше
 @media (min-width: 768px) {
   .search-form__input {
