--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -30,9 +30,8 @@
     border-bottom-style: solid;
     border-bottom-width: 2px;
     border-bottom-color: #9894a1;
-
     padding-left: 5px;
-    outline: none;
+    text-indent: 30px;
 
 
     &::placeholder {
