deleted  margin from movies

--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -118,7 +118,7 @@
 
 //фильмы
 .movies {
-  margin-bottom: 200px;
+  // margin-bottom: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
