--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -162,3 +162,26 @@
     color: white;
   }
 }
+
+//топ скролл
+@include for-size(mobile) {
+  .scroll-top {
+    position: fixed;
+    right: 16px;
+    bottom: 19px;
+    &__link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      border: 1px solid #68a8a3;
+      border-radius: 50%;
+      background-color: #8ecbc6;
+      box-shadow: 0px 0px 4px 2px #6AACA6;
+
+    }
+    
+  }
+}
+
