--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -140,6 +140,9 @@
     border-radius: 5px;
     overflow: hidden;
     margin-bottom: 20px;
+    &:hover {
+    cursor: pointer;
+    }
     // display: flex;
     // justify-content: center;
     @include for-size(tablet) {
