--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -184,6 +184,7 @@
   &__not-found  {
     padding: 10px;
     background-color: rgba($color: yellow, $alpha: 0.3);
+    text-align: center;
   }
 }
 
