--- a/src/sass/components/detailsPage.scss
+++ b/src/sass/components/detailsPage.scss
@@ -80,11 +80,11 @@
     margin-right: 10px;
   }
   .add-btn_watched::before {
-    content: url(../../images/video.png);
+    content: url(../images/video.png);
     padding-right: 8px;
   }
   .add-btn_queue::before {
-    content: url(../../images/calendar-plus.png);
+    content: url(../images/calendar-plus.png);
     padding-right: 8px;
   }
 }
