--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,3 +16,5 @@
 @import './components/homePage';
 @import './components/mains';
 @import './components/myFilmLibraryPage';
+@import './components/toolbar';
+@import './components/features';
