--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -134,6 +134,7 @@
     flex-wrap: wrap;
   }
 
+  
   &__image {
     border-radius: 10px;
     margin: 0 auto;
@@ -184,7 +185,8 @@
   &__not-found  {
     padding: 10px;
     background-color: rgba($color: yellow, $alpha: 0.3);
-    text-align: center;
+    display: block;
+    margin: 0 auto;
   }
 }
 
