fix click after

--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -65,8 +65,8 @@
     }
   }
   &__btn {
-    position: relative;
-    overflow: hidden;
+    // position: relative;
+    // overflow: hidden;
 
     width: 122px;
     opacity: 0.7;
