--- a/src/sass/components/mains.scss
+++ b/src/sass/components/mains.scss
@@ -23,3 +23,6 @@ main {
   /* Похоже, никто до конца не понимает, почему тут margin: -1px. Кроме того, это приводит к проблемам (читай: https://github.com/h5bp/html5-boilerplate/issues/1985). */
   margin: -1px;
 }
+.display-none {
+  display: none;
+}
