--- a/src/sass/components/toolbar.scss
+++ b/src/sass/components/toolbar.scss
@@ -1,11 +1,15 @@
 .toolbar {
   display: flex;
   justify-content: flex-end;
-  padding: 16px 24px;
+  padding: 0 24px;
   margin-left: 300px;
+    @include for-size(mobile) {
+       padding: 5px 24px;
+    }
   &__image {
-    width: 50px;
-    height: 50px;
+    margin: 5px 0;
+    width: 40px;
+    height: 40px;
     margin-bottom: 10px;
   }
 }
