--- a/src/sass/components/toolbar.scss
+++ b/src/sass/components/toolbar.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 0 24px;
+    margin-left: 53px;
   // margin-left: 300px;
     @include for-size(mobile) {
        padding: 5px 24px;
@@ -217,8 +218,3 @@
 }
 
 
-.subheader {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-}
