--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,3 +18,4 @@
 @import './components/myFilmLibraryPage';
 @import './components/toolbar';
 @import './components/features';
+@import './components/search';
