--- a/src/sass/components/features.scss
+++ b/src/sass/components/features.scss
@@ -3,17 +3,26 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .features {
 
   display: none;
   background: none;
+    & li, & h4 {
+          //  border: 2px solid #fd9644;
+-webkit-box-shadow: 0px 0px 7px 0px #fff; 
+box-shadow: 0px 0px 7px 0px #fff;
+
+    }
     &__title {
       // text-transform: uppercase;
-       border: 1px solid #ecf0f1;
+
           background-color: #e55039;
-          border-radius: 5px;
+          border-radius: 10px;
     color: #ecf0f1;
       // padding-top: 15px;
       font-size: 12px;
@@ -21,7 +30,7 @@
       // width: 100px;
       vertical-align: middle;
       text-align: center;
-      margin-right: 40px;
+      margin-right: 11px;
       margin-top: 5px;
       animation: fadeIIn;
       animation-direction: 2s;
@@ -33,8 +42,10 @@
     }
     &__item {
       font-size: 14px;
-    border: 1px solid #ecf0f1;
-    border-radius: 5px;
+    // border: 1px solid #fdcb6e;
+
+    // #d63031
+    border-radius: 10px;
     text-align: right;
     position: relative;
     animation: flipInX;
