--- a/src/sass/components/toolbar.scss
+++ b/src/sass/components/toolbar.scss
@@ -75,7 +75,7 @@
   height: 100%;
   color: transparent;
   user-select: none;
-  background-color: #333;
+  background-color: #e55039;
   border-radius: inherit;
   z-index: 1;
   transition: background-color 150ms;
