--- a/src/sass/components/features.scss
+++ b/src/sass/components/features.scss
@@ -1,4 +1,3 @@
-
 .subheader {
   display: flex;
   flex-direction: row;
@@ -9,39 +8,37 @@
 }
 
 .features {
-
   display: none;
   background: none;
-    & li, & h4 {
-          //  border: 2px solid #fd9644;
--webkit-box-shadow: 0px 0px 7px 0px #fff; 
-box-shadow: 0px 0px 7px 0px #fff;
+  & li,
+  & h4 {
+    //  border: 2px solid #fd9644;
+    -webkit-box-shadow: 0px 0px 7px 0px #fff;
+    box-shadow: 0px 0px 7px 0px #fff;
+  }
+  &__title {
+    // text-transform: uppercase;
 
-    }
-    &__title {
-      // text-transform: uppercase;
-
-          background-color: #e55039;
-          border-radius: 10px;
+    background-color: #e55039;
+    border-radius: 10px;
     color: #ecf0f1;
-      // padding-top: 15px;
-      font-size: 12px;
-      line-height: 40px;
-      // width: 100px;
-      vertical-align: middle;
-      text-align: center;
-      margin-right: 11px;
-      margin-top: 5px;
-      animation: fadeIIn;
-      animation-direction: 2s;
-      line-height: 40px;
-      padding: 0 15px;
-      width: 100px;
-      animation-fill-mode: forwards;
-
-    }
-    &__item {
-      font-size: 14px;
+    // padding-top: 15px;
+    font-size: 12px;
+    line-height: 40px;
+    // width: 100px;
+    vertical-align: middle;
+    text-align: center;
+    margin-right: 11px;
+    margin-top: 5px;
+    animation: fadeIIn;
+    animation-direction: 2s;
+    line-height: 40px;
+    padding: 0 15px;
+    width: 100px;
+    animation-fill-mode: forwards;
+  }
+  &__item {
+    font-size: 14px;
     // border: 1px solid #fdcb6e;
 
     // #d63031
@@ -55,36 +52,35 @@ box-shadow: 0px 0px 7px 0px #fff;
     line-height: 40px;
     background-color: #e67e22;
     color: #ecf0f1;
-      // animation-delay: 500ms;
+    // animation-delay: 500ms;
 
-      &::before {
-        position: absolute;
-        background-image: url('../../images/btn.png');
-        background-repeat: no-repeat;
-        // color: black;
-        content: " ";
-        // display: block;
-        margin-top: 10px;
-        z-index: 10;
-      }
+    &::before {
+      position: absolute;
+      background-image: url('../images/btn.png');
+      background-repeat: no-repeat;
+      // color: black;
+      content: ' ';
+      // display: block;
+      margin-top: 10px;
+      z-index: 10;
     }
+  }
   &.pro {
     @include for-size(mobile) {
       display: none;
     }
-     @include for-size(tablet) {
+    @include for-size(tablet) {
       display: none;
     }
     @include for-size(desktop) {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: nowrap;
-    line-height: 50px;
-    margin-right: 20px;
-    // margin-right: -300px;
-
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-wrap: nowrap;
+      line-height: 50px;
+      margin-right: 20px;
+      // margin-right: -300px;
+    }
   }
-}
 }
