--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -9,7 +9,7 @@
     position: relative;
     display: inline-block;
     vertical-align: text-top;
-    
+
     &::before {
       content: '';
       display: block;
@@ -27,11 +27,11 @@
   &__input {
     height: 22px;
     width: 256px;
-      border: 2px solid #a5b1c2;
+    border: 2px solid #a5b1c2;
     text-indent: 30px;
     padding-left: 5px;
     text-indent: 30px;
-    
+
     &::placeholder {
       font-size: 14px;
       letter-spacing: 0px;
@@ -86,7 +86,7 @@
     height: 50px;
     width: 284px;
     border-radius: 10px;
-        //  color: #778ca3;
+    //  color: #778ca3;
     &::placeholder {
       // text-align: center;
       font-size: 16px;
@@ -117,8 +117,8 @@
   }
 }
 
-.btn_page-number{
-  outline:none;
+.btn_page-number {
+  outline: none;
   cursor: default;
 }
 
@@ -135,7 +135,6 @@
     flex-wrap: wrap;
   }
 
-  
   &__image {
     border-radius: 10px;
     margin: 0 auto;
@@ -149,12 +148,12 @@
     border-radius: 5px;
     overflow: hidden;
     margin-bottom: 20px;
-    transition: all .5s ease-in-out;
-    &:hover {
-    cursor: pointer;
-    box-shadow: 0px 0px 17px 4px #E74C3C;
-    transform: scale(1.05);
 
+    transition: all 0.5s ease-in-out;
+    &:hover {
+      cursor: pointer;
+      box-shadow: 0px 0px 17px 4px #e74c3c;
+      transform: scale(1.05);
     }
     // display: flex;
     // justify-content: center;
@@ -188,8 +187,8 @@
     font-weight: 600;
     font-size: 1em;
   }
-  
-  &__not-found  {
+
+  &__not-found {
     padding: 10px;
     background-color: rgba($color: yellow, $alpha: 0.3);
     display: block;
@@ -199,7 +198,7 @@
 
 //топ скролл
 
-  .scroll-top {
+.scroll-top {
   @include for-size(mobile) {
     position: fixed;
     right: 16px;
@@ -213,13 +212,10 @@
       border: 1px solid #68a8a3;
       border-radius: 50%;
       background-color: #8ecbc6;
-      box-shadow: 0px 0px 4px 2px #6AACA6;
-
+      box-shadow: 0px 0px 4px 2px #6aaca6;
     }
-    
   }
   @include for-size(tablet) {
     width: 0;
   }
 }
-
