--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -62,6 +62,7 @@
   width: 272px;
   margin: 0 auto;
   padding-bottom: 24px;
+  visibility: visible;
 }
 
 .page-counter__btn {
@@ -78,6 +79,10 @@
 
 .hidden {
   display: none;
+}
+
+.btn_prev_hidden{
+visibility: hidden;
 }
 
 // Медиа SEARCH-FORM от 768px и выше
