--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -2,6 +2,7 @@ $main-font: Roboto, sans-serif;
 
 $main-color: #372c48;
 $white-color: #ffffff;
+$pro-color: #0f0f0f;
 $input-color: #000000;
 $pagination-color: #556270;
 $header-color: #77c1bb;
