--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -17,6 +17,7 @@ body {
 }
 
 body {
+  color: $pagination-color;
   overflow: auto;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
