--- a/src/sass/components/toolbar.scss
+++ b/src/sass/components/toolbar.scss
@@ -214,6 +214,6 @@
 }
 
 .pro {
-  background: linear-gradient(45deg, #3e5151, #5c5c4b);
+  background: linear-gradient(to right, #232526, #414345);
   color: $pro-color;
 }
