--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -10,7 +10,7 @@
   text-align: center;
   font-size: 16px;
   font-weight: 400;
-  // color: $main-color;
+  color: $main-color;
 }
 @include for-size(tablet) {
   .scroll-top {
