--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -37,7 +37,7 @@
         font-weight: 500;
         font-size: 20px;
         font-family: $main-font;
-        // color: $main-color;
+        color: $main-color;
       }
     }
   }
