fix release data

--- a/src/sass/components/homePage.scss
+++ b/src/sass/components/homePage.scss
@@ -81,8 +81,9 @@
   display: none;
 }
 
-.btn_prev_hidden{
-visibility: hidden;
+.btn_prev_hidden,
+.btn_next_hidden {
+  visibility: hidden;
 }
 
 // Медиа SEARCH-FORM от 768px и выше
